# GenAI-Template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  cookiecutter.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post_start.sh
app/: config.py  main.py
app/api/: main.py
app/api/endpoints/: greetings.py
app/api/schemas/: greetings.py
app/core/: greetings_service.py
app/models/: greetings.py
app/routers/: greetings.py
app/utils/: jinja_utils.py
hooks/: post_gen_project.py
tests/: conftest.py
tests/integration/: test_greet_endpoint.py
tests/unit/: test_greeting.py  test_settings.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.devcontainer/scripts/: post_create.sh
{{cookiecutter.project_slug}}/app/core/: greetings_service.py
{{cookiecutter.project_slug}}/app/prompts/: greeting_template.j2
{{cookiecutter.project_slug}}/app/utils/: jinja_utils.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/unit/: test_greeting.py
