[project]
name = "GenAI-POC-Template"
version = "0.1.0"
description = "A standardized template for Generative AI applications, promoting best practices and consistency across projects."
authors = [
    { name = "Florian Bindereif" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
# Folders to be exluded by ruff.
exclude = []

line-length = 120
unsafe-fixes = false
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
# Disables ruff for to-do comments and docstrings
ignore = ["D", "TD"]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
